<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_gradient">

    <ImageView
        android:id="@+id/img_camdencare_login"
        android:layout_width="@dimen/dimen_login_image_width"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_login_image_top"
        android:contentDescription="@string/str_camden_care_logo"
        app:layout_constraintDimensionRatio="h,0.66"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_app_horiz" />

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/TextViewRobotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_login_textview_top"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimen_login_textview_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_camdencare_login" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_mrn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_login_inputlayout_left_right"
        android:layout_marginTop="@dimen/dimen_login_inputlayout_top"
        android:layout_marginEnd="@dimen/dimen_login_inputlayout_left_right"
        android:hint="@string/str_enter_mrn"
        android:theme="@style/TextInputLayout"
        app:hintTextAppearance="@style/TextInputLayoutHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_camdencare_login"
        app:startIconDrawable="@drawable/ic_login_mrn"
        app:startIconTint="@color/colorWhite">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mrn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_login_inputlayout_drawablepadding"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_login_inputlayout_left_right"
        android:layout_marginTop="@dimen/dimen_login_inputlayout2_top"
        android:layout_marginEnd="@dimen/dimen_login_inputlayout_left_right"
        android:hint="@string/str_enter_mobile_number"
        android:theme="@style/TextInputLayout"
        app:hintTextAppearance="@style/TextInputLayoutHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textfield_mrn"
        app:startIconDrawable="@drawable/ic_login_number"
        app:startIconTint="@color/colorWhite">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_login_inputlayout_drawablepadding"
            android:inputType="number"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/colorWhite" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_login_button_margin"
        android:background="@drawable/bg_btn_rounded"
        android:text="@string/str_enter"
        android:textAllCaps="false"
        android:textColor="@color/colorButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textfield_mobile_number" />

</androidx.constraintlayout.widget.ConstraintLayout>
