<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorDarkBlue"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_camden_care"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/dimen_home_text"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/dimen_home_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_name"
        android:textSize="@dimen/dimen_home_text"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/dimen_home_name_top"
        android:maxLength="15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_camden_care"
        android:layout_marginStart="@dimen/dimen_home_name_start"/>

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str__23_yrs"
        android:textSize="@dimen/dimen_home_text"
        android:textColor="@color/colorWhite"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:layout_marginStart="@dimen/dimen_home_name_start"/>

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_id_3456_3432_1234"
        android:textSize="@dimen/dimen_home_text"
        android:textColor="@color/colorWhite"
        android:maxLength="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_age"
        android:layout_marginStart="@dimen/dimen_home_name_start"/>


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/dimen_home_image"
        android:layout_height="@dimen/dimen_home_image"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_home_image_margin"
        android:src="@drawable/ic_user_profile"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="4dp"
        app:civ_shadow="false"
        app:layout_constraintStart_toEndOf="@id/tv_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.2"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/view_top"
        app:layout_constraintBottom_toTopOf="@id/view_bottom">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_home_card_margin"
        android:background="@color/colorCardview"
        card_view:cardElevation="@dimen/dimen_home_cardview_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/table_layout"
                android:orientation="vertical"
                android:background="@color/colorCardview"
                android:paddingEnd="@dimen/dimen_home_table_padding"
                android:paddingStart="@dimen/dimen_home_table_padding">

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_summary"
                    android:textSize="@dimen/dimen_home_text"
                    android:textStyle="bold"
                    android:textColor="@color/colorDarkBlue" />
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/display_row"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_home_row_text_padding"
                        android:text="@string/str_date"
                        android:layout_weight="0.3"
                        android:textColor="#000"
                        android:textSize="@dimen/dimen_home_row_text" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_home_row_text_padding"
                        android:layout_weight="0.4"
                        android:text="@string/str_test"
                        android:textColor="#000"
                        android:textSize="@dimen/dimen_home_row_text" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:padding="@dimen/dimen_home_row_text_padding"
                        android:text="@string/str_status"
                        android:textColor="#000"
                        android:textSize="@dimen/dimen_home_row_text" />
                </TableRow>
            </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragmentHomeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="19"
            android:background="@color/colorCardview"
            tools:listitem="@layout/item_list_test"
            android:paddingStart="@dimen/dimen_home_table_padding"
            android:paddingEnd="@dimen/dimen_home_table_padding">

        </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </LinearLayout>

    <View
        android:id="@+id/view_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_logout"
        android:background="@color/colorDarkBlue"/>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_logout"
        android:textSize="@dimen/dimen_home_row_text"
        android:textColor="@color/colorWhite"
        android:maxLength="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintVertical_bias="0.96"/>

</androidx.constraintlayout.widget.ConstraintLayout>

